# cortex

./: .dockerignore  .editorconfig  .gitignore  .scalafmt.conf  .tool-versions  Dockerfile  Dockerfile.likec4  README.md  build.sbt  docker-compose.yml  viz-schema-prototype.yaml  viz-schema.yaml
.github/workflows/: _build-push-promote.yml  build-push-promote.yml  ci.yml  go-judge-image.yml  likec4-build-push-promote.yml  system-design-examples.yml
api/: openapi.yaml
client/: index.html  main.js  package-lock.json  package.json  playwright.config.ts  tailwind.css  vite.config.mjs  vitest.bench.config.mjs  vitest.config.mjs
client/public/: silent-check-sso.html
client/src/d3/: array-layout.test.ts  array-layout.ts  arrow-layer.ts  (+54 more)
content/cortex/system-design/01-foundations/examples/04-cap-pacelc-simulator/: README.md  justfile  pyproject.toml
content/cortex/system-design/01-foundations/examples/04-cap-pacelc-simulator/src/cap_simulator/: __init__.py  cluster.py  demo.py
content/cortex/system-design/01-foundations/examples/04-cap-pacelc-simulator/tests/: test_cluster.py
content/cortex/system-design/01-foundations/examples/05-littles-law-queueing/: README.md  justfile  pyproject.toml
content/cortex/system-design/01-foundations/examples/05-littles-law-queueing/src/queueing_lab/: __init__.py  demo.py  simulator.py
content/cortex/system-design/01-foundations/examples/05-littles-law-queueing/tests/: test_simulator.py
docs/: perf-baselines.md
project/: plugins.sbt
runner/go-judge/: Dockerfile  spike-probes.sh  validate-languages.sh
scripts/: devcombined
(+1668 files in other folders)
