[project]
name = "cap-simulator"
version = "0.1.0"
description = "A 3-node KV store with injectable partitions to demonstrate CAP and PACELC trade-offs."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cap_simulator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
