[project]
name = "queueing-lab"
version = "0.1.0"
description = "M/M/c queueing simulator demonstrating Little's Law and the latency cliff at high utilisation."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/queueing_lab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
